@@ -1,6 +1,7 @@
 1.19
  * ID3:
    * POPM: 'count' is optional; the attribute may not exist. (#33)
+   * TimeStampTextFrame: Fix a TypeError in unicode comparisons. (#43)
  * moggsplit: --m3u option to write an M3U playlist of the new files. (#39)
  * mid3v2: Add --quiet and --verbose flags. (#40)
  * mid3iconv: Fix crash when processing TCML or TIPL frames. (#41)
